fixing spacing bug on iphone

--- a/app/assets/stylesheets/intro.scss
+++ b/app/assets/stylesheets/intro.scss
@@ -305,6 +305,7 @@ margin: 0;
 
 .padding-bottom {
   height: 80px;
+  position: relative;
 }
 
 .padding-text {
